@@ -23,24 +23,64 @@ import org.apache.hadoop.mapreduce.Job;
 import org.apache.hadoop.mapreduce.Reducer;
 
 /**
- * Optional base class for Gora based {@link Reducer}s.
+ * Base class for Gora based {@link Reducer}s.
  */
 public class GoraReducer<K1, V1, K2, V2 extends Persistent>
-extends Reducer<K1, V1, K2, V2> {
-
+  extends Reducer<K1, V1, K2, V2> {
+ 
+  /**
+   * Initializes the Reducer, and sets output parameters for the job. 
+   * @param job the job to set the properties for
+   * @param dataStoreClass the datastore class
+   * @param keyClass output key class
+   * @param persistentClass output value class
+   * @param reducerClass the reducer class extending GoraReducer
+   * @param reuseObjects whether to reuse objects in serialization
+   */
   public static <K1, V1, K2, V2 extends Persistent>
-  void initReducerJob(Job job, DataStore<K2,V2> dataStore,
+  void initReducerJob(
+      Job job, 
+      Class<? extends DataStore<K2,V2>> dataStoreClass,
+      Class<K2> keyClass, 
+      Class<V2> persistentClass,
+      Class<? extends GoraReducer<K1, V1, K2, V2>> reducerClass, 
+      boolean reuseObjects) {
+    
+    GoraOutputFormat.setOutput(job, dataStoreClass, keyClass, persistentClass, reuseObjects);
+    
+    job.setReducerClass(reducerClass);
+  }
+  
+  /**
+   * Initializes the Reducer, and sets output parameters for the job. 
+   * @param job the job to set the properties for
+   * @param dataStore the datastore as the output
+   * @param reducerClass the reducer class extending GoraReducer
+   */
+  public static <K1, V1, K2, V2 extends Persistent>
+  void initReducerJob(
+      Job job, 
+      DataStore<K2,V2> dataStore,
       Class<? extends GoraReducer<K1, V1, K2, V2>> reducerClass) {
+
     initReducerJob(job, dataStore, reducerClass, true);
   }
 
+  /**
+   * Initializes the Reducer, and sets output parameters for the job. 
+   * @param job the job to set the properties for
+   * @param dataStore the datastore as the output
+   * @param reducerClass the reducer class extending GoraReducer
+   * @param reuseObjects whether to reuse objects in serialization
+   */
   public static <K1, V1, K2, V2 extends Persistent>
-  void initReducerJob(Job job, DataStore<K2,V2> dataStore,
-      Class<? extends GoraReducer<K1, V1, K2, V2>> reducerClass,
-          boolean reuseObjects) {
-    
+  void initReducerJob(
+      Job job, 
+      DataStore<K2,V2> dataStore,
+      Class<? extends GoraReducer<K1, V1, K2, V2>> reducerClass, 
+      boolean reuseObjects) {
+
     GoraOutputFormat.setOutput(job, dataStore, reuseObjects);
-    
     job.setReducerClass(reducerClass);
   }
 }
